--- a/pattern.html
+++ b/pattern.html
@@ -29,18 +29,43 @@
       
       <section>
         <h3>Fonts</h3>
-        <h4>Body: Verdana, Arial, sans-serif</h4>
-        <p>
-          ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
-          abcdefghijklmnopqrstuvwxyz<br />
-          1234567890
-        </p>
-        <h4>Headlines: "waltograph ", Arial, sans-serif</h4>
-        <h4>
+
+        <h4>Headlines:</h4>
+
+        <h4 class="heading">H1: Walter</h4>
+        <h4 class="heading">
           ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
           abcdefghijklmnopqrstuvwxyz<br />
           1234567890
         </h4>
+
+        <hr>
+
+        <h4 class="heading2">H2: Wicked Mouse</h4>
+        <h4 class="heading2">
+          ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
+          abcdefghijklmnopqrstuvwxyz<br />
+          1234567890
+        </h4>
+
+        <hr>
+
+        <h4 class="heading3">H3 - h5: Mouse Handwriting</h4>
+        <h4 class="heading3">
+          ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
+          abcdefghijklmnopqrstuvwxyz<br />
+          1234567890
+        </h4>
+
+        <hr><br><br><br>
+
+        <h4>Body:</h4>
+        <h4 class="the-body">p: Mickorama</h4>
+        <p class="the-body">
+          ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
+          abcdefghijklmnopqrstuvwxyz<br />
+          1234567890
+        </p>
       </section>
 
       <section class="colors">
@@ -66,20 +91,20 @@
       <section class="elements">
         <h3>Elements</h3>
         <div class="element">
-          <h4>H1</h4>
-          <h1>Headline1</h1>
+          <h4 class="heading">H1</h4>
+          <h1 class="heading">Headline1</h1>
         </div>
         <div class="element primary">
-          <h4>H2</h4>
-          <h2>Headline2</h2>
+          <h4 class="heading2">H2</h4>
+          <h2 class="heading2">Headline2</h2>
         </div>
         <div class="element">
-          <h4>H3</h4>
-          <h3>Headline3</h3>
+          <h4 class="heading3">H3</h4>
+          <h3 class="heading3">Headline3</h3>
         </div>
         <div class="element">
-          <h4>P normal</h4>
-          <p>
+          <h4 class="the-body">P normal</h4>
+          <p class="the-body">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -90,8 +115,8 @@
           </p>
         </div>
         <div class="element">
-          <h4>P Uppercase</h4>
-          <p class="uppercase">
+          <h4 class="the-body">P Uppercase</h4>
+          <p class="uppercase the-body">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -102,8 +127,8 @@
           </p>
         </div>
         <div class="element">
-          <h4>P Uppercase on colored background</h4>
-          <p class="uppercase-light primary">
+          <h4 class="the-body">P Uppercase on colored background</h4>
+          <p class="uppercase-light primary the-body">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
