--- a/pattern.html
+++ b/pattern.html
@@ -119,7 +119,9 @@
             href="http://csszengarden.com/217/"
             rel="noreferrer"
             target="_blank"
-            >Zen Garden: Screen Filler</a
+            >Zen Garden: Screen Filler</a>
+            <a href="https://wireframe.cc/JCUAq">Large Wireframe</a>
+            <a href="https://wireframe.cc/tARLv4">Small Wireframe</a>
           >
         </div>
       </section>
