--- a/pattern.html
+++ b/pattern.html
@@ -145,7 +145,7 @@
             rel="noreferrer"
             target="_blank"
             >Zen Garden: Screen Filler</a>
-            <a href="https://wireframe.cc/JCUAq">Large Wireframe</a>
+            <a href="https://wireframe.cc/JCUAql">Large Wireframe</a>
             <a href="https://wireframe.cc/tARLv4">Small Wireframe</a>
           >
         </div>
