--- a/pattern.html
+++ b/pattern.html
@@ -13,9 +13,9 @@
       </h1>
     </header>
     <main>
-      <h2>Theme: Screen Filler</h2>
+      <h2>Theme: Mickey Mouse </h2>
       <p>
-        Description of theme here. This example is based off of the
+        We love Disney Characters so we decided to go for a Mickey Mouse cartoon theme. We intend to have fun while bringing this theme to life in our zen garden
         <a href="http://csszengarden.com/217/" rel="noreferrer" target="_blank"
           >Screen Filler version</a
         >
