--- a/pattern.html
+++ b/pattern.html
@@ -23,7 +23,7 @@
       </p>
       <p>
         Here is a
-        <a href="../zen-style.zip">link to the source SCSS files</a> for the
+        <a href="https://github.com/chikaberry/zen-style.git">link to the source SCSS files</a> for the
         example.
       
       
