--- a/pattern.html
+++ b/pattern.html
@@ -15,7 +15,7 @@
     <main>
       <h2>Theme: Mickey Mouse </h2>
       <p>
-        We love Disney Characters so we decided to go for a Mickey Mouse cartoon theme. We intend to have fun while bringing this theme to life in our zen garden
+        We love Disney Characters so we decided to go for a Mickey Mouse cartoon theme. We intend to have fun while bringing this theme to life in our zen garden.
         <a href="http://csszengarden.com/217/" rel="noreferrer" target="_blank"
           >Screen Filler version</a
         >
