--- a/pattern.html
+++ b/pattern.html
@@ -17,8 +17,7 @@
       <p>
         We love Disney Characters so we decided to go for a Mickey Mouse cartoon theme. We intend to have fun while bringing this theme to life in our zen garden.
         <a href="http://csszengarden.com/217/" rel="noreferrer" target="_blank"
-          >Screen Filler version</a
-        >
+          >Screen Filler version</a>
         of the Zen Garden project.
       </p>
       
@@ -143,7 +142,6 @@
             >Zen Garden: Screen Filler</a>
             <a href="https://wireframe.cc/JCUAql">Large Wireframe</a>
             <a href="https://wireframe.cc/tARLv4">Small Wireframe</a>
-          >
         </div>
       </section>
     </main>
