--- a/pattern.html
+++ b/pattern.html
@@ -149,7 +149,7 @@
             target="_blank"
             >Zen Garden: Screen Filler</a>
             <a href="https://wireframe.cc/JCUAql">Large Wireframe</a>
-            <a href="https://wireframe.cc/tARLv4">Small Wireframe</a>
+            <a href="https://wireframe.cc/tARLv4">Mobile Wireframe</a>
           >
         </div>
       </section>
