--- a/Zenproject/index.html
+++ b/Zenproject/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
 
-	<link rel="stylesheet" media="screen" href="Zenproject/index.css">
+	<link rel="stylesheet" media="screen" href="index.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -179,7 +179,7 @@
 					</li>
 				</ul>
 			</div>
-		</div>
+		</d iv>
 	</aside>
 
 
